2005-02-03  Kenichi Handa  <handa@m17n.org>

	* international/characters.el: Cancel previous change. for
	I-WITH-DOT-ABOVE and DOTLESS-i.

	* international/latin-5.el: Cancel previous change.

2005-02-02  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el: Correction to syntax in gud-menu-map.

2005-02-02  Kenichi Handa  <handa@m17n.org>

	* international/latin-5.el (tbl): Setup cases of I-WITH-DOT-ABOVE,
	DOTLESS-i.

	* international/characters.el: Setup cases of GREEK-FINAL-SIGMA,
	Y-WITH-DIAERESIS, I-WITH-DOT-ABOVE, DOTLESS-i.

	* case-table.el (get-upcase-table): New function.
	(copy-case-table): Copy upcaes table too if non-nil.
	(set-case-syntax-delims): Maintain upcase table too.
	(set-case-syntax-pair): Likewise.
	(set-upcase-syntax, set-downcase-syntax): New functions.
	(set-case-syntax): Maintain upcase table too.

2005-02-02  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el: (gdb-goto-info): Delete.

	* progmodes/gud.el (gud-goto-info): New function.
	(gud-tool-bar-map): Use correct icon.

2005-02-01  Thien-Thi Nguyen  <ttn@gnu.org>

	* emacs-lisp/lisp-mode.el (lisp-indent-function): Fix bug:
	When delegating, order args in the funcall correctly.

2005-02-01  Thien-Thi Nguyen  <ttn@gnu.org>

	* emacs-lisp/lisp-mode.el (lisp-indent-function): Doc fix.

2005-02-01  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/reftex.el (reftex-access-scan-info): Error out in a
	buffer not visiting a file.

2005-01-31  Jay Belanger  <belanger@truman.edu>

	* calc/calc-embed.el (calc-embedded-find-bounds): Set the formula
	bound on the line with the formula.

2005-01-31  Kim F. Storm  <storm@cua.dk>

	* ses.el (ses-create-cell-variable-range)
	(ses-destroy-cell-variable-range, ses-reset-header-string)
	(ses-set-with-undo, ses-unset-with-undo, ses-aset-with-undo)
	(ses-insert-row): Fix format of apply undo entries.

2005-01-31  Jay Belanger  <belanger@truman.edu>

	* calc/calc-aent.el (math-read-token): Separate the TeX and LaTeX
	parts.
